--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <button class="btn">Download CV</button>
             </div>
             <div class="home-img">
-                <img src="img/dp1.jpg" alt="">
+                <img src="dp1.jpg" alt="">
             </div>
         </div>
     </section>
@@ -89,7 +89,7 @@
         <h1>About <span>Me</span></h1>
         <div class="about-container">
             <div class="about-img">
-                <img src="img/dp1.jpg" alt="">
+                <img src="dp1.jpg" alt="">
             </div>
             <div class="about-details">
                 <h2>Developer & Designer</h2>
@@ -194,8 +194,8 @@
     <section class="project" id="project">
         <h1>My <span>Project</span></h1>
         <div class="pro-content">
-            <img src="img/p1.png" alt="">
-            <!-- <img src="img/p2.png" alt=""> -->
+            <img src="p1.png" alt="">
+            <!-- <img src="p2.png" alt=""> -->
         </div>
     </section>
 
@@ -205,15 +205,15 @@
         <div class="field">
             <div class="img1">
                 <h3>As a developer</h3>
-                <img src="img/fe1.png" alt="">
+                <img src="fe1.png" alt="">
             </div>
             <div class="img2">
                 <h3>NGO Member</h3>
-                <img src="img/trust (2).png" alt="">
+                <img src="trust (2).png" alt="">
             </div>
             <div class="img3">
                 <h3>As a Supporter</h3>
-                <img src="img/trust (3).png" alt="">
+                <img src="trust (3).png" alt="">
             </div>
         </div>
     </section>
