--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li><a href="#work">My work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
-            <img onclick="openMenu()" src="img/menu.png" id = "menu-btn" alt="">
+            <img onclick="openMenu()" src="menu.png" id = "menu-btn" alt="">
         </nav>
     </header>
 
