--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
             <h2>Copyright <i class="fa-solid fa-copyright"></i> By Mayank Omar</h2>
         </div>
         <div class="links">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
         </div>
     </footer>
 </body>
