--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <i id="menu-close" onclick = "closeMenu()" class="fa-solid fa-xmark"></i>
                 <li><a  class = "active" href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#skills">My Skills</a></li>
-                <li><a href="#service">My Service</a></li>
+                <li><a href="#upskills">My Skills</a></li>
+                <li><a href="#upper">My Service</a></li>
                 <li><a href="#work">My work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
@@ -98,6 +98,7 @@
                 <p>A responsive design makes Your websites accesssible to all users, regardless to their device.</p>
             </div>
         </div>
+        <div id="upskills"></div>
     </section>
 
     <!-- skill -->
@@ -141,7 +142,7 @@
             <li style="list-style: circle;">12th</li>
             <p>I have completed my 12th standared on 2020 with 83%g rad</p>
             <li style="list-style: circle;">10th</li>
-            <p>I have completed my 10th standared on 2018 with 90% grad</p>
+            <p id="upper" >I have completed my 10th standared on 2018 with 90% grad</p>
         </div>
     </section>
 
