--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#upskills">My Skills</a></li>
                 <li><a href="#upper">My Service</a></li>
-                <li><a href="#work">My work</a></li>
+                <li><a href="#upwork">My work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
             <img onclick="openMenu()" src="menu.png" id = "menu-btn" alt="">
@@ -189,6 +189,7 @@
                 <a href="">Read More</a>
             </div>
         </div>
+        
     </section>
 
     <!-- project -->
@@ -198,6 +199,7 @@
             <img src="p1.png" alt="">
             <!-- <img src="p2.png" alt=""> -->
         </div>
+           <div id="upwork"></div>
     </section>
 
     <!-- work -->
